Добавлен пайп деплоя в workflows

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,6 +61,6 @@ jobs:
         with:
           context: .
           push: true
-          cache-from: hexletcomponents/java-javalin-example:latest
+          tags: user/java-project-72:latest
+          cache-from: type=registry,ref=user/java-project-72:latest
           cache-to: type=inline
-          tags: hexletcomponents/java-javalin-example:latest
