Добавлен пайп деплоя в workflows

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,9 +46,6 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./app
 
     if: ${{ github.event_name == 'push' }}
 
@@ -64,6 +61,7 @@ jobs:
       - uses: docker/build-push-action@v5
         with:
           context: .
+          file: ./app/Dockerfile
           push: true
           tags: user/java-project-72:latest
           cache-from: type=registry,ref=user/java-project-72:latest
